<resources>
    <string name="app_name">Earth</string>
    <string name="space">&#160;</string>
    <string name="about">关于</string>
    <string name="rights_warning">Copyright @2016 All right reserved</string>
    <string name="btn_submit">提交</string>
    <string name="unknown">unknown</string>
    <string name="loading_hint">加载中</string>
    <string name="parse_error">parse %s error</string>
    <string name="sure">确定</string>
    <string name="more_press_exit">再按一次退出</string>

    <!-- search -->
    <string name="quick_search">快速搜索</string>
    <string name="input_quick_search_name">输入快速搜索名:</string>
    <string name="please_search_first">请先执行搜索</string>

    <!-- favourites -->
    <string name="fav_list">收藏夹</string>

    <!-- download -->
    <string name="start_download_notification">正在下载Art</string>
    <string name="download_notification_prefix">正在下载:</string>
    <string name="download_failed" formatted="false">下载失败%s</string>
    <string name="art_file_name" formatted="false">%s-%s</string>
    <string name="download_title">下载</string>
    <string name="re_download">重新下载</string>

    <!-- register -->
    <string name="register">注册</string>
    <string name="register_error">注册失败</string>
    <string name="input_reg_code">请输入验证码</string>
    <string name="input_user_name">请输入用户名(用于登陆)</string>
    <string name="input_display_name">请输入昵称名称</string>

    <!-- rating -->
    <string name="rating_count" formatted="false">%.2f (%d人)</string>
    <string name="rating_num" formatted="false">%.0f星</string>

    <!-- category -->
    <string name="select_category">分类选择</string>
    <string name="category_search_key">f_%s</string>
    <string name="advanced_option">高级选项</string>
    <string name="advanced_option_search_key" formatted="false">f_s%s</string>

    <!-- favourite -->
    <string name="unlike_error">取消收藏失败</string>
    <string name="unlike_succeed">取消收藏成功</string>
    <string name="like_succeed">收藏成功</string>
    <string name="like_error">收藏失败</string>
    <string name="default_format_name">Favourites %s</string>

    <!-- transition name -->
    <string name="art_detail_transition_name">art_detail</string>

    <!-- behavior -->
    <string name="fixed_fling_behavior">android.support.design.widget.FixedFlingBehavior</string>
    <string name="hide_fab_on_scroll_behavior">me.littlekey.earth.widget.HideFabOnScrollBehavior</string>
    <string name="search_scroll_behavior">android.support.design.widget.SearchScrollBehavior</string>
    <string name="search_app_bar_behavior">android.support.design.widget.SearchAppBarBehavior</string>

    <!-- Login -->
    <string name="login">登陆</string>
    <string name="btn_login">登陆</string>
    <string name="input_account">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="login_error">登陆失败</string>
    <string name="input_email">请输入邮箱地址</string>
    <string name="register_info_error">注册信息错误</string>

    <!-- Detail -->
    <string name="page_count">%s页</string>
    <string name="zero_file_size">0 MB</string>

    <!-- Date && Time -->
    <string name="date_time_24">M月dd日 HH:mm</string>
    <string name="date_week_time">M月d日 E HH:mm</string>
    <string name="year_month_day_format">yyyy年MM月dd日</string>
    <string name="yesterday">昨天</string>
    <string name="sunday">星期日</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="hour_minute_format">hh时mm分</string>
    <string name="date_format">MM-dd</string>
    <string name="today">今天</string>
    <string name="date_ymd">yy/MM/dd</string>
    <string name="date_time">HH:mm</string>
    <string name="date_title">yyyy年MM月</string>
    <string name="date_day">MM-dd</string>
    <string name="date_week">E</string>
    <string name="date_show">E MM-dd</string>

    <!-- IconFont -->
    <string name="img_home">&#xe598;</string>
    <string name="img_down_arrow">&#xe597;</string>
    <string name="img_court">&#xe617;</string>
    <string name="img_people">&#xe615;</string>
    <string name="img_comment">&#xe616;</string>
    <string name="img_lock">&#xe60f;</string>
    <string name="img_hand_phone">&#xe60c;</string>
    <string name="img_weibo_circle">&#xe60b;</string>
    <string name="img_weixin_circle">&#xe60d;</string>
    <string name="img_qq_circle">&#xe60e;</string>
    <string name="img_weibo_round">&#xe600;</string>
    <string name="img_weixin_round">&#xe604;</string>
    <string name="img_qq_round">&#xe603;</string>
    <string name="img_weibo">&#xe601;</string>
    <string name="img_weixin">&#xe605;</string>
    <string name="img_weixin_friends">&#xe613;</string>
    <string name="img_qq">&#xe602;</string>
    <string name="img_search">&#xe606;</string>
    <string name="img_heart">&#xe607;</string>
    <string name="img_show_close">&#xe608;</string>
    <string name="img_show_open">&#xe609;</string>
    <string name="img_btn_back">&#xe60a;</string>
    <string name="img_setting">&#xe610;</string>
    <string name="img_clock">&#xe611;</string>
    <string name="img_cross">&#xe612;</string>
    <string name="img_add">&#xe594;</string>
    <string name="img_triangle">&#xe595;</string>
</resources>
