<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:fillViewport="true"
            android:scrollbars="none"
            tools:ignore="RtlHardcoded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/phone_area"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/translucency_border_bg">

            <me.littlekey.earth.widget.IconFontTextView
                style="@style/TextIconFontStyle"
                android:layout_width="50dp"
                android:text="@string/img_hand_phone"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/account_name"
                style="@style/EditTextStyle"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_account"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/account_password"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray_frame">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_area"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="13dp"
            android:background="@color/translucency_border_bg">

            <me.littlekey.earth.widget.IconFontTextView
                android:id="@+id/pwd_hint"
                style="@style/TextIconFontStyle"
                android:layout_width="50dp"
                android:text="@string/img_lock"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/account_password"
                style="@style/EditTextStyle"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:paddingRight="60dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray_frame"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <me.littlekey.earth.widget.StatefulButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/btn_login"
            app:stateCanceled="@style/State.Login.Canceled"
            app:stateDone="@style/State.Login.Done" />

    </LinearLayout>

</ScrollView>
