<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/search_scroll_behavior"
        app:scrollPaddingTop="60dp"/>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:elevation="0dp"
        app:layout_behavior="@string/search_app_bar_behavior"
        app:appbarPaddingTop="60dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="#eeffffff"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <me.littlekey.earth.widget.SearchCompleteView
                    android:id="@+id/search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/app_name"
                    android:singleLine="true"
                    android:inputType="text"
                    android:imeOptions="actionSearch"/>

                <me.littlekey.earth.widget.IconFontTextView
                    android:id="@+id/btn_clear"
                    style="@style/TextStyle.Normal.Black"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchor="@id/fragment_container"
        app:layout_anchorGravity="bottom|end|right"
        android:layout_margin="16dp"
        android:src="@drawable/search"
        app:backgroundTint="@color/colorPrimary"
        app:backgroundTintMode="src_atop"
        app:fabSize="mini"/>
</android.support.design.widget.CoordinatorLayout>
